@@ -1,0 +1,68 @@
+[system]
+N = 8
+m = 5
+kred = 0,1,2
+
+[hamiltonian]
+de = 10
+t = 1
+ueq = 1
+udiff = 0.1
+
+[iteration]
+deltaT = 1e-5
+steps = 1e7
+order = 3
+hiorder = 3
+loorder = 3
+
+[filemanagement]
+datapoints = 1e3
+datastore = True
+clear = True
+dmfiles = 1e2
+dmstore = False
+dmredstore = False
+dmfile_skipfactor = 5
+hamilstore = False
+occenstore = False
+occensingle = 0
+offdiag = False
+offdiagdens = False
+energiesstore = False
+decompstore = False
+diagexp = False
+retgreen = False
+
+[calcparams]
+onlyreduced = False
+totalentropy = True
+totalenergy = True
+
+[plotbools]
+data = True
+averages = True
+hamiltonian = False
+densistymatrix = False
+reducedmatrix = False
+occen = False
+offdiag = False
+offdiagsingles = False
+offdiagdens = False
+energies = False
+decomposition = False
+diagexp = False
+timescale = False
+dos = False
+spectraldensity = False
+green = False
+
+[plotvals]
+dmstepsize = 1
+dmfps = 5
+fontsize = 16
+legendsize = 15
+avg_frame = 201
+avg_order = 1
+loavgperc = 25
+timescale = 1
