@@ -1,2 +1,3 @@
 ### 05.09.2017
 - added entropy eps plot and averaging
+- added default.ini to the files list so older datasets can be analyzed as well
